Networkable/force-app/main/default/objects/Opportunity/fields/Chosen_Specifier__c.field-meta.xml
<CustomField>
    <fullName>Chosen_Specifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chosen Specifier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>