Networkable/force-app/main/default/objects/Opportunity/fields/End_Client__c.field-meta.xml
<CustomField>
    <fullName>End_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (End Client)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>