Networkable/force-app/main/default/objects/Opportunity/fields/Winning_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Winning_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Winning Contractor)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>