Networkable/force-app/main/default/objects/Opportunity/fields/Winning_Specifier__c.field-meta.xml
<CustomField>
    <fullName>Winning_Specifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Specifier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Winning Specifier)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>